--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DOM-Assignment</title>
-    <link rel="stylesheet" href="output.css" />
+    <link rel="stylesheet" href="./src/output.css" />
   </head>
   <body class="font-montserrat bg-blue-200">
     <!-- Navbar section -->
@@ -148,5 +148,5 @@
       </div>
     </div>
   </body>
-  <script src="index.js"></script>
+  <script src="./src/index.js"></script>
 </html>
