--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   </head>
   <body class="font-montserrat bg-blue-200">
     <!-- Navbar section -->
-    <header class="mt-10 flex justify-between">
-      <h1 class="ml-10 text-2xl font-bold text-blue-600">
+    <header class="mt-4 md:mt-10 flex flex-col md:flex-row justify-between items-center">
+      <h1 class="text-xl md:ml-10 md:text-2xl font-bold text-blue-600 mb-4 md:mb-0">
         Student Registration System
       </h1>
-      <nav class="flex">
-        <ul class="mr-20 flex cursor-pointer gap-10 font-medium">
+      <nav class="flex w-full md:w-auto justify-center">
+        <ul class="flex flex-wrap justify-center px-4 md:mr-20 cursor-pointer gap-3 md:gap-10 font-medium">
           <li
             class="rounded-3xl border border-blue-400 p-2 text-blue-400 hover:border-blue-600 hover:text-blue-600"
           >
@@ -35,88 +35,88 @@
 
     <!-- Student registration form -->
     <div
-        class="mx-20 mt-16 justify-evenly rounded-2xl border border-blue-400 pb-10 shadow-xl hover:shadow-2xl"
+        class="mx-4 md:mx-20 mt-8 md:mt-16 justify-evenly rounded-2xl border border-blue-400 pb-10 shadow-xl hover:shadow-2xl"
       >
-        <h3 class="mt-10 text-center text-2xl font-bold text-blue-600">
+        <h3 class="mt-6 md:mt-10 text-center text-xl md:text-2xl font-bold text-blue-600">
           Fill the Data
         </h3>
-        <form id="student-form" class="grid grid-cols-3 gap-10 p-8">
+        <form id="student-form" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 md:gap-10 p-4 md:p-8">
           <!-- Input filed for student name -->
-          <section class="mx-auto">
-            <label for="name" class="font-medium"
+          <section class="mx-auto w-full max-w-xs">
+            <label for="student-name" class="font-medium block mb-1"
               >Enter your Name* <br
             /></label>
             <input
               id="student-name"
               type="text"
-              class="rounded-xl border-1 border-blue-400 p-2 ring-0 outline-0 hover:border-blue-600"
+              class="w-full rounded-xl border-1 border-blue-400 p-2 ring-0 outline-0 hover:border-blue-600"
               required
             />
           </section>
 
           <!-- input filed for students classs -->
-          <section class="mx-auto">
-            <label for="name" class="font-medium">Enter your ID* <br /></label>
+          <section class="mx-auto w-full max-w-xs">
+            <label for="student-id" class="font-medium block mb-1">Enter your ID* <br /></label>
             <input
               id="student-id"
               type="number"
-              class="rounded-xl border-1 border-blue-400 p-2 ring-0 outline-0 hover:border-blue-600"
+              class="w-full rounded-xl border-1 border-blue-400 p-2 ring-0 outline-0 hover:border-blue-600"
               required
             />
           </section>
 
           <!-- input field for students id -->
-          <section class="mx-auto">
-            <label for="name" class="font-medium"
+          <section class="mx-auto w-full max-w-xs">
+            <label for="student-class" class="font-medium block mb-1"
               >Enter your Class <br
             /></label>
             <input
               id="student-class"
               type="number"
-              class="rounded-xl border-1 border-blue-400 p-2 ring-0 outline-0 hover:border-blue-600"
+              class="w-full rounded-xl border-1 border-blue-400 p-2 ring-0 outline-0 hover:border-blue-600"
               required
             />
           </section>
 
-          <section class="mx-auto">
-            <label for="name" class="font-medium"
+          <section class="mx-auto w-full max-w-xs">
+            <label for="student-phone" class="font-medium block mb-1"
               >Enter your Phone No* <br
             /></label>
             <input
               id="student-phone"
               type="text"
-              class="rounded-xl border-1 border-blue-400 p-2 ring-0 outline-0 hover:border-blue-600"
+              class="w-full rounded-xl border-1 border-blue-400 p-2 ring-0 outline-0 hover:border-blue-600"
               required
             />
           </section>
 
-          <section class="mx-auto">
-            <label for="name" class="font-medium">Enter Roll No* <br /></label>
+          <section class="mx-auto w-full max-w-xs">
+            <label for="student-roll" class="font-medium block mb-1">Enter Roll No* <br /></label>
             <input
               id="student-roll"
               type="number"
-              class="rounded-xl border-1 border-blue-400 p-2 ring-0 outline-0 hover:border-blue-600"
+              class="w-full rounded-xl border-1 border-blue-400 p-2 ring-0 outline-0 hover:border-blue-600"
               required
             />
           </section>
 
-          <section class="mx-auto">
-            <label for="name" class="font-medium"
+          <section class="mx-auto w-full max-w-xs">
+            <label for="student-email" class="font-medium block mb-1"
               >Enter your E-Mail* <br />
             </label>
             <input
               id="student-email"
               type="email"
-              class="rounded-xl border-1 border-blue-400 p-2 ring-0 outline-0 hover:border-blue-600"
+              class="w-full rounded-xl border-1 border-blue-400 p-2 ring-0 outline-0 hover:border-blue-600"
               required
             />
           </section>
 
-          <!-- input field for students phone number -->
+          <!-- Submit button -->
           <button
             type="submit"
             id="submit-btn"
-            class="col-span-3 mx-auto mt-8 w-1/4 rounded-lg border-1 border-blue-400 p-3 hover:border-blue-600 hover:text-blue-500"
+            class="col-span-1 md:col-span-2 lg:col-span-3 mx-auto mt-4 md:mt-8 w-full md:w-1/2 lg:w-1/4 rounded-lg border-1 border-blue-400 p-3 hover:border-blue-600 hover:text-blue-500"
           >
             Submit
           </button>
@@ -126,21 +126,21 @@
 
     <!-- Data Table Section -->
     <div
-      class="mx-20 mt-16 mb-20 rounded-2xl border border-blue-400 p-8 shadow-xl hover:shadow-2xl"
+      class="mx-4 md:mx-20 mt-8 md:mt-16 mb-10 md:mb-20 rounded-2xl border border-blue-400 p-4 md:p-8 shadow-xl hover:shadow-2xl"
     >
-      <h3 class="text-center text-2xl font-bold text-blue-600">Saved Data</h3>
+      <h3 class="text-center text-xl md:text-2xl font-bold text-blue-600">Saved Data</h3>
 
       <!-- Scrollable Table -->
-      <div class="mt-5 max-h-80 overflow-y-auto">
+      <div class="mt-5 max-h-80 overflow-y-auto overflow-x-auto">
         <table class="w-full border-collapse border border-blue-400">
           <thead>
             <tr class="bg-blue-300">
-              <th class="border border-blue-400 px-4 py-2">Name</th>
-              <th class="border border-blue-400 px-4 py-2">Roll No.</th>
-              <th class="border border-blue-400 px-4 py-2">ID</th>
-              <th class="border border-blue-400 px-4 py-2">Email</th>
-              <th class="border border-blue-400 px-4 py-2">Phone</th>
-              <th class="border border-blue-400 px-4 py-2">Actions</th>
+              <th class="border border-blue-400 px-2 py-1 md:px-4 md:py-2">Name</th>
+              <th class="border border-blue-400 px-2 py-1 md:px-4 md:py-2">Roll No.</th>
+              <th class="border border-blue-400 px-2 py-1 md:px-4 md:py-2">ID</th>
+              <th class="border border-blue-400 px-2 py-1 md:px-4 md:py-2">Email</th>
+              <th class="border border-blue-400 px-2 py-1 md:px-4 md:py-2">Phone</th>
+              <th class="border border-blue-400 px-2 py-1 md:px-4 md:py-2">Actions</th>
             </tr>
           </thead>
           <tbody id="student-table-body"></tbody>
